tests/error/scan1_func_fail.gw
// [contains] ...in function
function void test() { Unknown var; }
